# Simple-Regex-Parser

./: README.md  pyproject.toml
nfa_regex/: __main__.py  regex_parser.py
parser/: __init__.py  main.py  nfa.py  nfa_runner.py  regex_parser.py  test_main.py
parser/src/: main.py  nfa.py  nfa_runner.py  parser.py  regex_parser.py
tests/: test_main.py  test_regex_engine.py
