[project]
name = "simpleregexparser"
version = "0.1.0"
description = "A minimal Python library for parsing and simulating regular expressions using nondeterministic finite automata (NFA). "
authors = [
    {name = "mamahoos",email = "m4m4hoos@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
